Fix header on mobile, Add dedicated blog page

--- a/main.css
+++ b/main.css
@@ -10,34 +10,34 @@ body {
 	cursor: default;
 }
 
-body h1 {
+h1 {
 	font-size: 4em;
 }
 
-body h2 {
+h2 {
 	font-size: 3em;
 }
 
-body h3 {
-	font-size: 1.5em;
+h3 {
+	font-size: 2em;
 }
 
-body ul {
+ul {
 	padding: 0;
 	list-style: none;
 	text-align: center;
 }
 
-body li:first-child {
+li:first-child {
 	margin-top: 0;
 }
 
-body li {
-	margin-top: 2em;
+li {
+	margin-top: 1em;
 	text-align: center;
 }
 
-body a {
+a {
 	color: #666;
 	text-decoration: none;
 	font-weight: 700;
@@ -92,12 +92,12 @@ footer {
 }
 
 @media (hover: hover) {
-	body a {
+	a {
 		color: #666;
 		transition: color 0.3s ease-in-out;
 	}
 
-	body a:hover {
+	a:hover {
 		color: green;
 	}
 }
@@ -117,19 +117,6 @@ footer {
 
 	body h3 {
 		font-size: 1.5em;
-	}
-
-	header {
-		line-height: 1.5em;
-		width: 100%;
-	}
-
-	header li:first-child, li:last-child {
-		display: inline;
-	}
-
-	header li {
-		display: none;
 	}
 
 	section {
